# django.wtf

./: .dockerignore  .drone.jsonnet  .editorconfig  .env  .envrc  .eslintrc.yml  .gitignore  .jsbeautifyrc  .prettierrc.yml  .ptpython_config.py  .pylintrc  .stylelintrc.yaml  Dockerfile  Dockerfile.test_js  README.md  README.rst  Taskfile.yml  docker-compose.yml  jsonnetfile.json  jsonnetfile.lock.json  local.yml  manage.py  package-lock.json  package.json  production.yml  ptpython_config.py  pudb.cfg  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci-cd.yml
compose/production/traefik/: traefik.yml
config/: asgi.py  celery_app.py  gunicorn.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django_apps/: conftest.py
django_apps/core/: admin.py  apps.py  factories.py  filters.py  github_api_urls.py  github_tasks.py  hacker_news_tasks.py  models.py  pypi_tasks.py  reddit_tasks.py  repository_detail.py  search_view.py  signals.py  sitemap_views.py  tasks.py  test_github_tasks.py  test_tasks.py  tests.py  urls.py  utils.py  views.py
django_apps/core/migrations/: 0011_alter_pypirelease_options_alter_pypirelease_project.py
django_apps/core/tasks/: github.py  hacker_news.py  reddit.py  test_github.py
django_apps/core/templatetags/: paginator_tags.py
django_apps/static/css/: pygments.css
django_apps/static/js/: repository_detail.js
django_apps/templates/: 403.html  404.html  500.html  base.html
django_apps/templates/core/: base.html  category_detail.html  index.html  profile_list.html  repository_detail.html  search.html  social_media_news.html  top_profiles.html  top_repositories.html  trending_profiles.html  trending_repositories.html
django_apps/templates/core/components/: _footer.html  _navbar.html  pagination.html
django_apps/templates/wagtail_code_blog/: blog_index_page.html  blog_page.html
django_apps/theme/: apps.py
django_apps/theme/static_src/: package-lock.json  package.json  tailwind.config.js
django_apps/theme/static_src/src/: styles.css
django_apps/users/: admin.py  apps.py  models.py  urls.py  views.py
django_apps/users/migrations/: 0002_alter_user_id.py
django_apps/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
django_wtf/: __init__.py  conftest.py
django_wtf/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_alter_site_options.py
django_wtf/core/: admin.py  apps.py  email_subscribe_views.py  factories.py  filters.py  github_api_urls.py  github_tasks.py  hacker_news_tasks.py  models.py  pypi_tasks.py  queries.py  reddit_tasks.py  search_adapter.py  search_view.py  sitemap_views.py  task_metrics.py  tasks.py  test_email_subscribe_views.py  test_github_tasks.py  test_index_view.py  test_models.py  urls.py  utils.py  views.py
django_wtf/core/migrations/: 0001_initial.py  0002_repository_archived_repository_description_and_more.py  0003_alter_repositorystars_unique_together.py  0004_category_repository_categories.py  0005_profile_followers_alter_profilefollowers_profile.py  0006_socialnews.py  0007_pypiproject_pypirelease.py  0008_alter_pypiproject_license_and_more.py  0009_alter_repository_categories.py  0010_repository_readme_html.py  0011_emailsubscriber.py
django_wtf/core/models/: __init__.py  category_model.py  contributor_model.py  email_subscriber_model.py  profile_model.py  pypi_project.py  pypi_release.py  repository_model.py  social_media_news_model.py
django_wtf/core/templatetags/: wtf_tags.py
django_wtf/core/views/: __init__.py  category_view.py  detail_view.py  email_subscribe_views.py  index_view.py  sitemap_views.py  social_media_news_view.py  test_email_subscribe_views.py  test_index_view.py  test_trending_repositories_view.py  top_profiles_view.py  top_repositories_view.py  trending_profiles_view.py  trending_repositories_view.py
django_wtf/core/viewz/: detail_view.py
django_wtf/customadmin/: admin.py  apps.py
django_wtf/templates/core/: base.html  category_detail.html  email_subscriber_landing.html  index.html  repository_detail.html  search.html  search_table.html  social_media_news.html  top_profiles.html  top_repositories.html  trending_profiles.html  trending_repositories.html
django_wtf/templates/core/components/: _footer.html  _navbar.html  pagination.html
django_wtf/templates/wagtail_code_blog/: blog_index_page.html  blog_page.html
django_wtf/theme/: apps.py
django_wtf/theme/static_src/: package-lock.json  package.json  tailwind.config.js
django_wtf/users/: adapters.py  admin.py  apps.py  forms.py  urls.py
django_wtf/users/migrations/: 0001_initial.py  0003_remove_user_name_user_first_name_user_last_name.py
django_wtf/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
django_wtf/utils/: storages.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
requirements/: base.txt  local.txt
